Fixed non-experiment track code generation

--- a/nbs/test/test_tracking.ipynb
+++ b/nbs/test/test_tracking.ipynb
@@ -215,10 +215,23 @@
     "# exportn_step:preprocess\n",
     "\n",
     "\n",
-    "def preprocess(message, model_level=None, min_date=None, traffic_percent=100):\n",
+    "def preprocess(\n",
+    "    message, model_level=None, min_date=None, traffic_percent=100, tracker=None\n",
+    "):\n",
     "    print(f\"I captialised the message: {message.upper()}\")\n",
     "    data = get_utterances(model_level, min_date, traffic_percent)\n",
     "    documents = data.tolist()\n",
+    "    if tracker:\n",
+    "        with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "            tracker.log_metric(\"roc\", 0.9, 0)\n",
+    "            csv_path = f\"{temp_dir}/preprocess.csv\"\n",
+    "            df = pd.DataFrame({\"a\": [1, 2, 3], \"b\": [\"a\", \"b\", \"c\"]})\n",
+    "            df.to_csv(csv_path)\n",
+    "            tracker.add_artifact(csv_path)\n",
+    "            fig = df.a.plot.hist().figure\n",
+    "            png_path = f\"{temp_dir}/preprocess.png\"\n",
+    "            fig.savefig(png_path)\n",
+    "            tracker.add_artifact(png_path)\n",
     "    results = {\"documents\": documents}\n",
     "    return results"
    ]
@@ -293,8 +306,19 @@
     "# exportn_step:fit\n",
     "\n",
     "\n",
-    "def fit(documents, workers=workers):\n",
+    "def fit(documents, workers=workers, tracker=None):\n",
     "    model = Topics(documents, workers=workers)\n",
+    "    if tracker:\n",
+    "        with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "            tracker.log_metric(\"roc\", 0.9, 0)\n",
+    "            csv_path = f\"{temp_dir}/fit.csv\"\n",
+    "            df = pd.DataFrame({\"a\": [1, 2, 3], \"b\": [\"a\", \"b\", \"c\"]})\n",
+    "            df.to_csv(csv_path)\n",
+    "            tracker.add_artifact(csv_path)\n",
+    "            fig = df.a.plot.hist().figure\n",
+    "            png_path = f\"{temp_dir}/fit.png\"\n",
+    "            fig.savefig(png_path)\n",
+    "            tracker.add_artifact(png_path)\n",
     "    results = {\"model\": model}\n",
     "    return results"
    ]
