--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,7 @@
     "import os\n",
     "from pathlib import Path, PosixPath\n",
     "from typing import Iterable\n",
+    "import shutil\n",
     "\n",
     "import numpy as np\n",
     "from fastcore.script import Param, call_parse\n",
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,6 +180,8 @@
     "        params,\n",
     "        track_experiment,\n",
     "    )\n",
+    "    if track_experiment:\n",
+    "        write_cli_wrapper(flow_path, extract_module_only(module_name), [s.name for s in steps])\n",
     "    if not silent:\n",
     "        print(\n",
     "            f\"Converted {nb_name} to {flow_class_name} in: {os.path.basename(flow_path)}\"\n",
@@ -187,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +218,7 @@
     "        has_mf_param = any((p.has_metaflow_param for p in param_meta.values()))\n",
     "        has_json_param = any((p.is_json_type for p in param_meta.values()))\n",
     "        mf_params_import = \"from metaflow import FlowSpec, step, current\"\n",
-    "        if has_mf_param:\n",
+    "        if has_mf_param or track_experiment:\n",
     "            mf_params_import += \", Parameter\"\n",
     "        if has_json_param:\n",
     "            mf_params_import += \", JSONType\"\n",
@@ -251,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,28 +321,20 @@
     "\n",
     "def write_steps(flow_file, steps, orig_step_names, param_meta, ind, track_experiment):\n",
     "    for i, step in enumerate(steps):\n",
-    "        # Check for padded step\n",
-    "        if i < len(orig_step_names):\n",
-    "            flow_step_args = \"\"\n",
-    "            if len(step.args) > 0:\n",
-    "                flow_step_args = \", \".join(\n",
-    "                    [format_arg(a, param_meta) for a in step.args.split(\",\")]\n",
-    "                )\n",
+    "        if track_experiment:\n",
+    "            # Check for padded step\n",
+    "            if i < len(orig_step_names):\n",
+    "                flow_step_args = \"\"\n",
+    "                if len(step.args) > 0:\n",
+    "                    flow_step_args = \", \".join(\n",
+    "                        [format_arg(a, param_meta) for a in step.args.split(\",\")]\n",
+    "                    )\n",
     "\n",
-    "            step_func_call_text = f\"{orig_step_names[i]}({flow_step_args})\"\n",
+    "                step_func_call_text = f\"{orig_step_names[i]}({flow_step_args})\"\n",
     "\n",
-    "            if track_experiment:\n",
     "                write_track_internal_helper(\n",
-    "                    flow_file, ind, step, orig_step_names[i], step_func_call_text\n",
+    "                    flow_file, ind, steps, orig_step_names[i], step_func_call_text.replace(\"self.tracker\", \"tracker\"), i\n",
     "                )\n",
-    "\n",
-    "                flow_file.write(f\"{ind}@step\\n\")\n",
-    "                flow_file.write(f\"{ind}def {step.name}(self):\\n\")\n",
-    "                flow_file.write(f\"{ind}{ind}self._{step.name}()\\n\")\n",
-    "                if i < len(steps) - 1:\n",
-    "                    next_step = \"end\" if i == len(steps) - 1 else steps[i + 1].name\n",
-    "                    flow_file.write(f\"{ind}{ind}self.next(self.{next_step})\\n\")\n",
-    "                flow_file.write(f\"\\n\")\n",
     "        else:\n",
     "            flow_file.write(f\"{ind}@step\\n\")\n",
     "            flow_file.write(f\"{ind}def {step.name}(self):\\n\")\n",
@@ -361,7 +356,7 @@
     "                        raise ValueError(\n",
     "                            f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
     "                        )\n",
-    "                    flow_file.write(f\"{ind}{ind}results = {step_func_call_text}\\n\")\n",
+    "                    flow_file.write(f\"{ind}{ind}results = {orig_step_names[i]}({flow_step_args})\\n\")\n",
     "                    write_track_capture(flow_file, ind, 2)\n",
     "            if i < len(steps):\n",
     "                next_step = \"end\" if i == len(steps) - 1 else steps[i + 1].name\n",
@@ -371,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,8 +394,9 @@
     "\n",
     "\n",
     "def write_track_internal_helper(\n",
-    "    flow_file, ind, step, orig_step_name, step_func_call_text\n",
+    "    flow_file, ind, steps, orig_step_name, step_func_call_text, i\n",
     "):\n",
+    "    step = steps[i]\n",
     "    flow_file.write(f\"{ind}def _{step.name}(self):\\n\")\n",
     "    if step.docstring:\n",
     "        flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
@@ -437,7 +433,84 @@
     "    flow_file.write(\n",
     "        f'{ind}{ind}{ind}{ind}tracker.completed(status=\"FAILED\", except_info=except_info)\\n'\n",
     "    )\n",
-    "    flow_file.write(f\"{ind}{ind}{ind}raise\\n\\n\")"
+    "    flow_file.write(f\"{ind}{ind}{ind}raise\\n\\n\")\n",
+    "    flow_file.write(f\"{ind}@step\\n\")\n",
+    "    flow_file.write(f\"{ind}def {step.name}(self):\\n\")\n",
+    "    flow_file.write(f\"{ind}{ind}self._{step.name}()\\n\")\n",
+    "    if i < len(steps) - 1:\n",
+    "        next_step = steps[i + 1].name\n",
+    "        flow_file.write(f\"{ind}{ind}self.next(self.{next_step})\\n\")\n",
+    "    flow_file.write(f\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metaflow CLI Wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def write_cli_wrapper(flow_path, flow_base_key, steps):\n",
+    "    wrapper_body = f\"\"\"from metaflow import FlowSpec, step, current\n",
+    "import os\n",
+    "from datetime import datetime\n",
+    "from sciflow.experiment.tracking import FlowTracker, StepTracker\n",
+    "from sciflow.run_flow import run_shell_cmd\n",
+    "import sys\n",
+    "import tempfile\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    wrapped_module = \"{flow_path.stem}\"\n",
+    "    if len(sys.argv) == 1:\n",
+    "        cmd = f\"python _{flow_path.stem} show\"\n",
+    "        pipe, output = run_shell_cmd(cmd)\n",
+    "        print(output)\n",
+    "    else:\n",
+    "        if \"show\" in sys.argv or \"help\" in sys.argv[1]:\n",
+    "            full_cmd = \" \".join(sys.argv)\n",
+    "            cmd = f\"python {{full_cmd.replace(sys.argv[0], wrapped_module)}}\"\n",
+    "            pipe, output = run_shell_cmd(cmd)\n",
+    "            print(output)\n",
+    "        elif \"run\" in sys.argv[1]: \n",
+    "            bucket_name = os.environ['SCIFLOW_BUCKET']\n",
+    "            run_timestamp = datetime.today().__str__().replace(':', '-').replace('.', '-').replace(' ', '-')[:-3]\n",
+    "            flow_base_key = \"{flow_base_key}\"\n",
+    "            flow_run_id = f\"flow-{{run_timestamp}}\"\n",
+    "            steps = {steps}\n",
+    "        \n",
+    "            flow_tracker = FlowTracker(os.environ['SCIFLOW_BUCKET'], flow_base_key, flow_run_id, steps)\n",
+    "            flow_tracker.start()\n",
+    "            \n",
+    "            try:\n",
+    "                sys.argv[1] = \"--no-pylint run\"\n",
+    "                full_cmd = \" \".join(sys.argv)\n",
+    "                full_cmd += f\" --bucket_name {{bucket_name}} --flow_base_key {{flow_base_key}} --flow_run_id {{flow_run_id}}\"\n",
+    "                cmd = f\"python {{full_cmd.replace(sys.argv[0], wrapped_module)}}\"\n",
+    "                pipe, output = run_shell_cmd(cmd)\n",
+    "                print(output)\n",
+    "            except (KeyboardInterrupt):\n",
+    "                flow_tracker.interrupted()\n",
+    "                print(f\"Flow interrupted by user: {{flow_run_id}}\")\n",
+    "            except BaseException:\n",
+    "                exc_type, exc_value, trace = sys.exc_info()\n",
+    "                except_info = {{\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}}\n",
+    "                flow_tracker.failed(except_info)\n",
+    "                print(f\"Flow failed: {{flow_run_id}}\")\n",
+    "\n",
+    "            flow_tracker.completed()\"\"\"\n",
+    "    shutil.copyfile(flow_path, str(flow_path).replace(flow_base_key, f\"_{flow_base_key}\"))\n",
+    "    with open(flow_path, \"w\") as wrapper_file:\n",
+    "        wrapper_file.write(wrapper_body)"
    ]
   },
   {
@@ -449,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,18 +533,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
+     ]
+    }
+   ],
    "source": [
     "nb_to_metaflow(nb_path, get_flow_path(nb_path), silent=False, track_experiment=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n"
+     ]
+    }
+   ],
    "source": [
     "nb_to_metaflow(\n",
     "    Path(\n",
@@ -494,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,25 +612,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted test_tracking.ipynb to TestTrackingFlow in: test_tracking.py\n",
+      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n",
+      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
+      "No params cell found for: test_module.ipynb\n",
+      "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
+      "No params cell found for: test_multistep_no_params.ipynb\n",
+      "Converted test_multistep_no_params.ipynb to TestMultistepNoParamsFlow in: test_multistep_no_params.py\n",
+      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
+     ]
+    }
+   ],
    "source": [
     "generate_flows(track_experiment=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted test_tracking.ipynb to TestTrackingFlow in: test_tracking.py\n",
+      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n",
+      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
+      "No params cell found for: test_module.ipynb\n",
+      "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
+      "No params cell found for: test_multistep_no_params.ipynb\n",
+      "Converted test_multistep_no_params.ipynb to TestMultistepNoParamsFlow in: test_multistep_no_params.py\n",
+      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
+     ]
+    }
+   ],
    "source": [
     "generate_flows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,20 +671,26 @@
     "def sciflow_metaflow(track: Param(\"Track flows as sacred experiments\", bool) = True):\n",
     "    generate_flows(get_config(), track)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
    "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
