--- a/nbs/test/test_module.ipynb
+++ b/nbs/test/test_module.ipynb
@@ -33,7 +33,7 @@
     "# exportn_step:first\n",
     "\n",
     "\n",
-    "def first(some_param: int, tracker):\n",
+    "def first(some_param: int):\n",
     "    print(some_param)\n",
     "    another_int = some_param + 5\n",
     "    results = {\"another_int\": another_int}\n",
