--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,8 +358,8 @@
     "                        )\n",
     "                    flow_file.write(f\"{ind}{ind}results = {orig_step_names[i]}({flow_step_args})\\n\")\n",
     "                    write_track_capture(flow_file, ind, 2)\n",
-    "            if i < len(steps):\n",
-    "                next_step = \"end\" if i == len(steps) - 1 else steps[i + 1].name\n",
+    "            if i < len(steps) - 1:\n",
+    "                next_step = steps[i + 1].name\n",
     "                flow_file.write(f\"{ind}{ind}self.next(self.{next_step})\\n\")\n",
     "            flow_file.write(\"\\n\")"
    ]
@@ -447,7 +447,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metaflow CLI Wrapper"
+    "# Metaflow CLI Wrapper\n",
+    "\n",
+    "Metaflow does  not currently allow the main function to be wrapper inside a flow module. Resorting to using another module CLI to get the right behaviour."
    ]
   },
   {
@@ -508,7 +510,7 @@
     "                print(f\"Flow failed: {{flow_run_id}}\")\n",
     "\n",
     "            flow_tracker.completed()\"\"\"\n",
-    "    shutil.copyfile(flow_path, str(flow_path).replace(flow_base_key, f\"_{flow_base_key}\"))\n",
+    "    shutil.copyfile(flow_path, str(flow_path).replace(flow_base_key, f\"_sciflow_{flow_base_key}\"))\n",
     "    with open(flow_path, \"w\") as wrapper_file:\n",
     "        wrapper_file.write(wrapper_body)"
    ]
@@ -612,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +670,8 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_metaflow(track: Param(\"Track flows as sacred experiments\", bool) = True):\n",
+    "def sciflow_metaflow(track: Param(\"Track flows as experiments\", bool) = True):\n",
+    "    print(f\"Converting flows to metaflow (experiment tracking = {track}))\n",
     "    generate_flows(get_config(), track)"
    ]
   }
