--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -1367,7 +1367,8 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_sagemaker(track: Param(\"Track flows as sacred experiments\", bool) = True):\n",
+    "def sciflow_sagemaker(track: Param(\"Track flows as experiments\", bool) = True):\n",
+    "    print(f\"Converting flows to sagemaker pipelines (experiment tracking = {track}))\n",
     "    generate_flows(track)"
    ]
   },
@@ -1389,10 +1390,23 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
    "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
