[WIP] adding consistent experiment tracking to to_metaflow and to_sagemaker

--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,9 @@
     "\n",
     "\n",
     "import os\n",
+    "import shutil\n",
     "from pathlib import Path, PosixPath\n",
     "from typing import Iterable\n",
-    "import shutil\n",
     "\n",
     "import numpy as np\n",
     "from fastcore.script import Param, call_parse\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,9 @@
     "        track_experiment,\n",
     "    )\n",
     "    if track_experiment:\n",
-    "        write_cli_wrapper(flow_path, extract_module_only(module_name), [s.name for s in steps])\n",
+    "        write_cli_wrapper(\n",
+    "            flow_path, extract_module_only(module_name), [s.name for s in steps]\n",
+    "        )\n",
     "    if not silent:\n",
     "        print(\n",
     "            f\"Converted {nb_name} to {flow_class_name} in: {os.path.basename(flow_path)}\"\n",
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +335,13 @@
     "                step_func_call_text = f\"{orig_step_names[i]}({flow_step_args})\"\n",
     "\n",
     "                write_track_internal_helper(\n",
-    "                    flow_file, ind, steps, orig_step_names[i], step_func_call_text.replace(\"self.tracker\", \"tracker\"), i\n",
+    "                    flow_file,\n",
+    "                    ind,\n",
+    "                    param_meta,\n",
+    "                    steps,\n",
+    "                    orig_step_names[i],\n",
+    "                    step_func_call_text.replace(\"self.tracker\", \"tracker\"),\n",
+    "                    i,\n",
     "                )\n",
     "        else:\n",
     "            flow_file.write(f\"{ind}@step\\n\")\n",
@@ -356,8 +364,13 @@
     "                        raise ValueError(\n",
     "                            f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
     "                        )\n",
-    "                    flow_file.write(f\"{ind}{ind}results = {orig_step_names[i]}({flow_step_args})\\n\")\n",
+    "                    flow_file.write(\n",
+    "                        f\"{ind}{ind}results = {orig_step_names[i]}({flow_step_args})\\n\"\n",
+    "                    )\n",
     "                    write_track_capture(flow_file, ind, 2)\n",
+    "            else:\n",
+    "                flow_file.write(f\"{ind}{ind}pass\\n\")\n",
+    "                flow_file.write(\"\\n\")\n",
     "            if i < len(steps) - 1:\n",
     "                next_step = steps[i + 1].name\n",
     "                flow_file.write(f\"{ind}{ind}self.next(self.{next_step})\\n\")\n",
@@ -366,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +407,7 @@
     "\n",
     "\n",
     "def write_track_internal_helper(\n",
-    "    flow_file, ind, steps, orig_step_name, step_func_call_text, i\n",
+    "    flow_file, ind, param_meta, steps, orig_step_name, step_func_call_text, i\n",
     "):\n",
     "    step = steps[i]\n",
     "    flow_file.write(f\"{ind}def _{step.name}(self):\\n\")\n",
@@ -454,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +523,9 @@
     "                print(f\"Flow failed: {{flow_run_id}}\")\n",
     "\n",
     "            flow_tracker.completed()\"\"\"\n",
-    "    shutil.copyfile(flow_path, str(flow_path).replace(flow_base_key, f\"_sciflow_{flow_base_key}\"))\n",
+    "    shutil.copyfile(\n",
+    "        flow_path, str(flow_path).replace(flow_base_key, f\"_sciflow_{flow_base_key}\")\n",
+    "    )\n",
     "    with open(flow_path, \"w\") as wrapper_file:\n",
     "        wrapper_file.write(wrapper_body)"
    ]
@@ -524,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,34 +550,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_to_metaflow(nb_path, get_flow_path(nb_path), silent=False, track_experiment=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_to_metaflow(\n",
     "    Path(\n",
@@ -585,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,55 +613,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted test_tracking.ipynb to TestTrackingFlow in: test_tracking.py\n",
-      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n",
-      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
-      "No params cell found for: test_module.ipynb\n",
-      "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
-      "No params cell found for: test_multistep_no_params.ipynb\n",
-      "Converted test_multistep_no_params.ipynb to TestMultistepNoParamsFlow in: test_multistep_no_params.py\n",
-      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "generate_flows(track_experiment=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted test_tracking.ipynb to TestTrackingFlow in: test_tracking.py\n",
-      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n",
-      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
-      "No params cell found for: test_module.ipynb\n",
-      "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
-      "No params cell found for: test_multistep_no_params.ipynb\n",
-      "Converted test_multistep_no_params.ipynb to TestMultistepNoParamsFlow in: test_multistep_no_params.py\n",
-      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "generate_flows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_flows(track_experiment=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,30 +639,17 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_metaflow(track: Param(\"Track flows as experiments\", bool) = True):\n",
-    "    print(f\"Converting flows to metaflow (experiment tracking = {track}))\n",
+    "def sciflow_metaflow(track: Param(\"Track flows as experiments\", type=bool)):\n",
+    "    print(f\"Converting flows to metaflow (experiment tracking = {track})\")\n",
     "    generate_flows(get_config(), track)"
    ]
   }
  ],
  "metadata": {
-  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
    "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.0"
   }
  },
  "nbformat": 4,
