Fixed bad write issue with metaflow experiments wrapper

--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -475,59 +475,82 @@
     "\n",
     "\n",
     "def write_cli_wrapper(flow_path, flow_base_key, steps):\n",
-    "    wrapper_body = f\"\"\"from metaflow import FlowSpec, step, current\n",
-    "import os\n",
-    "from datetime import datetime\n",
-    "from sciflow.experiment.tracking import FlowTracker, StepTracker\n",
-    "from sciflow.run_flow import run_shell_cmd\n",
-    "import sys\n",
-    "import tempfile\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    wrapped_module = \"{flow_path.stem}\"\n",
-    "    if len(sys.argv) == 1:\n",
-    "        cmd = f\"python _{flow_path.stem} show\"\n",
-    "        pipe, output = run_shell_cmd(cmd)\n",
-    "        print(output)\n",
-    "    else:\n",
-    "        if \"show\" in sys.argv or \"help\" in sys.argv[1]:\n",
-    "            full_cmd = \" \".join(sys.argv)\n",
-    "            cmd = f\"python {{full_cmd.replace(sys.argv[0], wrapped_module)}}\"\n",
-    "            pipe, output = run_shell_cmd(cmd)\n",
-    "            print(output)\n",
-    "        elif \"run\" in sys.argv[1]: \n",
-    "            bucket_name = os.environ['SCIFLOW_BUCKET']\n",
-    "            run_timestamp = datetime.today().__str__().replace(':', '-').replace('.', '-').replace(' ', '-')[:-3]\n",
-    "            flow_base_key = \"{flow_base_key}\"\n",
-    "            flow_run_id = f\"flow-{{run_timestamp}}\"\n",
-    "            steps = {steps}\n",
-    "        \n",
-    "            flow_tracker = FlowTracker(os.environ['SCIFLOW_BUCKET'], flow_base_key, flow_run_id, steps)\n",
-    "            flow_tracker.start()\n",
-    "            \n",
-    "            try:\n",
-    "                sys.argv[1] = \"--no-pylint run\"\n",
-    "                full_cmd = \" \".join(sys.argv)\n",
-    "                full_cmd += f\" --bucket_name {{bucket_name}} --flow_base_key {{flow_base_key}} --flow_run_id {{flow_run_id}}\"\n",
-    "                cmd = f\"python {{full_cmd.replace(sys.argv[0], wrapped_module)}}\"\n",
-    "                pipe, output = run_shell_cmd(cmd)\n",
-    "                print(output)\n",
-    "            except (KeyboardInterrupt):\n",
-    "                flow_tracker.interrupted()\n",
-    "                print(f\"Flow interrupted by user: {{flow_run_id}}\")\n",
-    "            except BaseException:\n",
-    "                exc_type, exc_value, trace = sys.exc_info()\n",
-    "                except_info = {{\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}}\n",
-    "                flow_tracker.failed(except_info)\n",
-    "                print(f\"Flow failed: {{flow_run_id}}\")\n",
-    "\n",
-    "            flow_tracker.completed()\"\"\"\n",
     "    shutil.copyfile(\n",
     "        flow_path, str(flow_path).replace(flow_base_key, f\"_sciflow_{flow_base_key}\")\n",
     "    )\n",
+    "    ind = \"    \"\n",
     "    with open(flow_path, \"w\") as wrapper_file:\n",
-    "        wrapper_file.write(wrapper_body)"
+    "        wrapper_file.write(\"#!/usr/bin/env python\\n\")\n",
+    "        wrapper_file.write(\"# coding=utf-8\\n\")\n",
+    "        wrapper_file.write(\"import os\\n\")\n",
+    "        wrapper_file.write(\"from datetime import datetime\\n\")\n",
+    "        wrapper_file.write(\n",
+    "            \"from sciflow.experiment.tracking import FlowTracker, StepTracker\\n\"\n",
+    "        )\n",
+    "        wrapper_file.write(\"from sciflow.run_flow import run_shell_cmd\\n\")\n",
+    "        wrapper_file.write(\"import sys\\n\")\n",
+    "        wrapper_file.write(\"import tempfile\\n\")\n",
+    "        wrapper_file.write(\"\\n\")\n",
+    "        wrapper_file.write(\"\\n\")\n",
+    "        wrapper_file.write('if __name__ == \"__main__\":\\n')\n",
+    "        wrapper_file.write(f'{ind}wrapped_module = \"_sciflow_{flow_path.name}\"\\n')\n",
+    "        wrapper_file.write(f\"{ind}if len(sys.argv) == 1:\\n\")\n",
+    "        wrapper_file.write(f'{ind}{ind}cmd = f\"python {{wrapped_module}} show\"\\n')\n",
+    "        wrapper_file.write(f\"{ind}{ind}pipe, output = run_shell_cmd(cmd)\\n\")\n",
+    "        wrapper_file.write(f\"{ind}{ind}print(output)\\n\")\n",
+    "        wrapper_file.write(f\"{ind}else:\\n\")\n",
+    "        wrapper_file.write(\n",
+    "            f'{ind}{ind}if \"show\" in sys.argv or \"help\" in sys.argv[1]:\\n'\n",
+    "        )\n",
+    "        wrapper_file.write(f'{ind}{ind}{ind}full_cmd = \" \".join(sys.argv)\\n')\n",
+    "        wrapper_file.write(\n",
+    "            f'{ind}{ind}{ind}cmd = f\"python {{full_cmd.replace(sys.argv[0], wrapped_module)}}\"\\n'\n",
+    "        )\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}pipe, output = run_shell_cmd(cmd)\\n\")\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}print(output)\\n\")\n",
+    "        wrapper_file.write(f'{ind}{ind}elif \"run\" in sys.argv[1]:\\n')\n",
+    "        wrapper_file.write(\n",
+    "            f\"{ind}{ind}{ind}bucket_name = os.environ['SCIFLOW_BUCKET']\\n\"\n",
+    "        )\n",
+    "        wrapper_file.write(\n",
+    "            f\"{ind}{ind}{ind}run_timestamp = datetime.today().__str__().replace(':', '-').replace('.', '-').replace(' ', '-')[:-3]\\n\"\n",
+    "        )\n",
+    "        wrapper_file.write(f'{ind}{ind}{ind}flow_base_key = \"{flow_base_key}\"\\n')\n",
+    "        wrapper_file.write(f'{ind}{ind}{ind}flow_run_id = f\"flow-{{run_timestamp}}\"\\n')\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}steps = {steps}\\n\\n\")\n",
+    "        wrapper_file.write(\n",
+    "            f\"{ind}{ind}{ind}flow_tracker = FlowTracker(os.environ['SCIFLOW_BUCKET'], flow_base_key, flow_run_id, steps)\\n\"\n",
+    "        )\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}flow_tracker.start()\\n\")\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}\\n\")\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}try:\\n\")\n",
+    "        wrapper_file.write(f'{ind}{ind}{ind}{ind}sys.argv[1] = \"--no-pylint run\"\\n')\n",
+    "        wrapper_file.write(f'{ind}{ind}{ind}{ind}full_cmd = \" \".join(sys.argv)\\n')\n",
+    "        wrapper_file.write(\n",
+    "            f'{ind}{ind}{ind}{ind}full_cmd += f\" --bucket_name {{bucket_name}} --flow_base_key {{flow_base_key}} --flow_run_id {{flow_run_id}}\"\\n'\n",
+    "        )\n",
+    "        wrapper_file.write(\n",
+    "            f'{ind}{ind}{ind}{ind}cmd = f\"python {{full_cmd.replace(sys.argv[0], wrapped_module)}}\"\\n'\n",
+    "        )\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}{ind}pipe, output = run_shell_cmd(cmd)\\n\")\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}{ind}print(output)\\n\")\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}except (KeyboardInterrupt):\\n\")\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}{ind}flow_tracker.interrupted()\\n\")\n",
+    "        wrapper_file.write(\n",
+    "            f'{ind}{ind}{ind}{ind}print(f\"Flow interrupted by user: {{flow_run_id}}\")\\n'\n",
+    "        )\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}except BaseException:\\n\")\n",
+    "        wrapper_file.write(\n",
+    "            f\"{ind}{ind}{ind}{ind}exc_type, exc_value, trace = sys.exc_info()\\n\"\n",
+    "        )\n",
+    "        wrapper_file.write(\n",
+    "            f'{ind}{ind}{ind}{ind}except_info = {{\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}}\\n'\n",
+    "        )\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}{ind}flow_tracker.failed(except_info)\\n\")\n",
+    "        wrapper_file.write(\n",
+    "            f'{ind}{ind}{ind}{ind}print(f\"Flow failed: {{flow_run_id}}\")\\n'\n",
+    "        )\n",
+    "        wrapper_file.write(f\"{ind}{ind}{ind}flow_tracker.completed()\\n\")"
    ]
   },
   {
@@ -626,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_flows(track_experiment=False)"
+    "generate_flows(track_experiment=True)"
    ]
   },
   {
@@ -639,7 +662,7 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_metaflow(track: Param(\"Track flows as experiments\", type=bool)):\n",
+    "def sciflow_metaflow(track: Param(\"Track flows as experiments\", default=True)):\n",
     "    print(f\"Converting flows to metaflow (experiment tracking = {track})\")\n",
     "    generate_flows(get_config(), track)"
    ]
